--- a/laa-datastore-common/build.gradle
+++ b/laa-datastore-common/build.gradle
@@ -26,7 +26,9 @@ repositories {
 
 dependencies {
     // Spring
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'com.google.code.gson', module: 'gson'
+    }
     implementation 'org.springframework:spring-aspects'
 
     // Test
