--- a/spring-boot-microservice-api/build.gradle
+++ b/spring-boot-microservice-api/build.gradle
@@ -8,7 +8,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'com.google.code.gson', module: 'gson'
+    }
+
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 }
