--- a/spring-boot-microservice-service/build.gradle
+++ b/spring-boot-microservice-service/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'com.google.code.gson', module: 'gson'
+    }
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 
@@ -40,9 +42,8 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
-    implementation 'org.postgresql:postgresql:42.6.0'
-//    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
-
+    implementation 'org.postgresql:postgresql:42.7.2'
+    implementation 'org.javers:javers-persistence-sql:7.8.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
