--- a/access-datastore-service/src/main/resources/application.yml
+++ b/access-datastore-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: LAA Spring Boot Microservice
+    name: LAA Access Datastore
 
   datasource:
     url: jdbc:postgresql://localhost:5432/laa_db
@@ -32,8 +32,8 @@ spring:
 
 info:
   app:
-    name: LAA Spring Boot Microservice application
-    description: An example Spring Boot Microservice application that provides a REST API.
+    name: LAA Access Datastore
+    description: Access Data Stewardship REST API
     version: 1.0.0
 
 management:
