chore: reduce build time warnings
- use explicit Groovy DSL method calls, to help find old-style setter warning
- add git properties Gradle plugin to augment the info actuator
- fix excluded Jacoco class name
- fix MapperStruct warnings for generated mappings

references DSTEW-35

--- a/access-datastore-api/build.gradle
+++ b/access-datastore-api/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 sourceSets.main.java.srcDirs += ['generated/src/main/java']
 
-checkstyleMain.exclude "*"
+checkstyleMain.exclude("*")
 
 openApiGenerate {
     generatorName = "spring"
@@ -38,10 +38,10 @@ openApiGenerate {
     ]
 }
 
-compileJava.dependsOn 'openApiGenerate'
+compileJava.dependsOn('openApiGenerate')
 
 clean {
-    delete "$rootDir/access-datastore-api/generated"
+    delete("$rootDir/access-datastore-api/generated")
 }
 
 // disable for overall project when running a build
