--- a/access-datastore-api/build.gradle
+++ b/access-datastore-api/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-web') {
+    implementation('org.springframework.boot:spring-boot-starter-web:3.4.5') {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
 
