--- a/access-datastore-common/build.gradle
+++ b/access-datastore-common/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     // Spring
-    implementation('org.springframework.boot:spring-boot-starter-web') {
+    implementation('org.springframework.boot:spring-boot-starter-web:3.4.5') {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
     implementation 'org.springframework:spring-aspects'
