added workflow and actions for docker and synk

--- a/.github/workflows/feature-build.yml
+++ b/.github/workflows/feature-build.yml
@@ -32,5 +32,12 @@ jobs:
         with:
           token: ${{ secrets.SNYK_TOKEN }}
 
+#      - name: Create Docker image
+#        uses: ./.github/actions/publish
+#        with:
+#          registry: ${{ inputs.environment }}
+#          repository: ${{ inputs.dockerfile_path }}
+#          tag: ${{ inputs.image_tag }}
+
       - name: Post Setup Containers
         run: docker compose down
