added workflow and actions for docker and synk

--- a/.github/actions/synk-scan/action.yml
+++ b/.github/actions/synk-scan/action.yml
@@ -12,7 +12,7 @@ runs:
       uses: snyk/actions/setup@master
 
     - name: Run Snyk scan
-      run: snyk test -d --all-projects --severity-threshold=high --sarif-file-output=snyk.sarif --exclude=access-datastore-api/generated
+      run: snyk test -d --all-projects --severity-threshold=high --sarif-file-output=snyk.sarif --exclude=pom.xml
       env:
         SNYK_TOKEN: ${{ inputs.token }}
       shell: bash
