refactor!: rename Git repository, modules and packages
- standardise the name of the Git repository, the project, the modules and packages
- make changes to build scripts and other files to accommodate these changes
- update the README with the new names

references DSTEW-19

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,9 +18,9 @@ updates:
       interval: "weekly"
     groups:
       gradle-updates:
-        exclude-patterns: [ "uk.gov.justice.laa.access.datastore.*" ]
+        exclude-patterns: [ "uk.gov.justice.laa.dstew.access.*" ]
       internal-updates:
-        patterns: [ "uk.gov.justice.laa.access.datastore*" ]
+        patterns: [ "uk.gov.justice.laa.dstew.access*" ]
 
   - package-ecosystem: "github-actions"
     directory: "/"
