--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,18 +16,19 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    registries: "*"
     groups:
       gradle-updates:
         exclude-patterns: [ "uk.gov.justice.laa.dstew.access.*" ]
-      internal-updates:
-        patterns: [ "uk.gov.justice.laa.dstew.access*" ]
+      internal-packages:
+        patterns: [ "uk.gov.justice.laa.dstew.access.*" ]
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
     groups:
-      github-actions-updates:
+      github-actions:
         patterns: [ "**" ]
 
   - package-ecosystem: "docker"
@@ -35,7 +36,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      dockerfile-updates:
+      docker:
         patterns: [ "**" ]
 
   - package-ecosystem: "docker-compose"
@@ -43,5 +44,5 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      docker-compose-updates:
+      docker-compose:
         patterns: [ "**" ]
