--- a/.github/workflows/feature-build.yml
+++ b/.github/workflows/feature-build.yml
@@ -32,12 +32,12 @@ jobs:
         with:
           token: ${{ secrets.SNYK_TOKEN }}
 
-#      - name: Create Docker image
-#        uses: ./.github/actions/publish
-#        with:
-#          registry: ${{ inputs.environment }}
-#          repository: ${{ inputs.dockerfile_path }}
-#          tag: ${{ inputs.image_tag }}
+      - name: Create Docker image
+        uses: ./.github/actions/publish
+        with:
+          registry: ${{ secrets.ECR_REGISTRY_URL }}
+          repository: ${{ env.ECR_REPOSITORY }}
+          tag: ${{ env.image_tag }}
 
       - name: Post Setup Containers
         run: docker compose down
