--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
         
 jobs:
   setup-containers:
-    uses: ./.github/actions/bring-up-testing-container
+    uses: ./.github/actions/bring-up-testing-container/action.yml
 
   build-and-publish-snapshot:
     uses: ministryofjustice/laa-ccms-common-workflows/.github/workflows/gradle-build-and-publish.yml@v1
