feat: Add Entra authorisation
- Add OAuth2 and Spring Security starters, and Azure AD (now Entra) starter
- Add Spring Security filterChain beans for security enabled and disabled
- Add PreAuthorize annotations to service methods with required permissions
- Update application configuration with Entra settings (from env vars)
- Add IDEA run configs to gitignore because they may contain secrets

references: DSTEW-19

--- a/dstew-access-service/src/main/resources/application.yml
+++ b/dstew-access-service/src/main/resources/application.yml
@@ -30,11 +30,22 @@ spring:
       sqs:
         endpoint: http://localhost:4566
 
+    azure:
+      active-directory:
+        enabled: ${ENTRA_ENABLED:true}  # set ENTRA_ENABLED=false for development
+        profile:
+          tenant-id: ${ENTRA_TENANT_ID}
+        app-id-uri: ${ENTRA_APP_ID_URI}
+
 info:
   app:
     name: Access
     description: LAA Access Data Stewardship REST API
     version: 1.0.0
+
+logging:
+  level:
+    com.azure.spring: INFO
 
 management:
   endpoints:
