--- a/dstew-access-service/build.gradle
+++ b/dstew-access-service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude group: 'com.google.code.gson', module: 'gson'
@@ -39,6 +41,9 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
     implementation "io.awspring.cloud:spring-cloud-aws-starter-sqs:3.3.1"
+
+    // Spring Boot Starter for Microsoft Entra (provides auto-configuration specific to Entra)
+    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.22.0'
 
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
