added workflow and actions based on ccms

--- a/.github/workflows/publish-feature.yml
+++ b/.github/workflows/publish-feature.yml
@@ -2,8 +2,9 @@ name: Deploy feature
 
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - 'feature-dev/**'
+      - 'feature-test/**'
 
 permissions:
   contents: read
