feat: Add business validation and transformation rules
- Use `feature.security` as an easier-to-use property name than
  `spring.cloud.azure.active-directory.enabled`
- Simplify SecurityConfig to avoid possibly ambiguous OAuth2
- Rename `common` package in the `shared` module to `shared`
- Update `GlobalExceptionHandler` to use `ProblemDetail` structured
  JSON errors and to handle validation exception
- Add simple business validations rules components (method per DTO,
  class per domain) that can be injected into the service layer
- Add simple response transformation ResponseAdvice with registry
  of transformer per DTO and access to security authorities
- Add utility methods for security authorities (shared module)
  and for validation (validation package)

references: DSTEW-19

--- a/dstew-access-service/src/main/resources/application.yml
+++ b/dstew-access-service/src/main/resources/application.yml
@@ -32,7 +32,6 @@ spring:
 
     azure:
       active-directory:
-        enabled: ${ENTRA_ENABLED:true}  # set ENTRA_ENABLED=false for development
         profile:
           tenant-id: ${ENTRA_TENANT_ID}
         app-id-uri: ${ENTRA_APP_ID_URI}
@@ -58,3 +57,11 @@ management:
   info:
     env:
       enabled: true
+
+### Set feature flags in the environment to avoid committing insecure values.
+### For example, `FEATURE_SECURITY=false` to disable endpoint authorization,
+### or `FEATURE_TRANSFORMATION=false` to disable response transformations.
+
+#feature:
+#  security: true
+#  transformation: true
