--- a/dstew-access-shared/build.gradle
+++ b/dstew-access-shared/build.gradle
@@ -30,6 +30,7 @@ dependencies {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
     implementation 'org.springframework:spring-aspects'
+    implementation 'org.springframework.security:spring-security-core'
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
