--- a/dstew-access-service/build.gradle
+++ b/dstew-access-service/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+    implementation "org.flywaydb:flyway-core"
+    runtimeOnly "org.postgresql:postgresql"
+    runtimeOnly "org.flywaydb:flyway-database-postgresql"
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
