feat: Simplify authorisation
- Reduce Javers dependency from persistence to core.
- Simplify transformation and validation packages to use authorization by
  injection rather than in the interface signatures.
- Handle the ability to remove items from the transformed response by
  returning `null` from the `ResponseTransformer.transform()` method.
- Add EffectiveAuthorizationProvider as a Spring Component for authorisation,
  with two implementations for prod/dev to replace static `SecurityUtils`.
- Use `@entra.has...` security functions in `@PreAuthorize` annotations.

references: DSTEW-11

--- a/dstew-access-service/build.gradle
+++ b/dstew-access-service/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
     implementation 'org.postgresql:postgresql:42.7.6'
-    implementation 'org.javers:javers-persistence-sql:7.8.0'
+    implementation 'org.javers:javers-core:7.8.0' // instead of `implementation 'org.javers:javers-persistence-sql:7.8.0'`
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
