ci: Add Vid to CODEOWNERS
references: DSTEW-11

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-*                     @ministryofjustice/laa-data-stewardship-access-team
+*                     @ministryofjustice/laa-data-stewardship-access-team @vvartakMoJ
 /.github/CODEOWNERS   @ministryofjustice/laa-data-stewardship-access-admins
