--- a/dstew-access-service/build.gradle
+++ b/dstew-access-service/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'com.avast.gradle.docker-compose' version '0.17.12'
 }
 
-dockerCompose.isRequiredBy(test)
 dockerCompose.isRequiredBy(integrationTest)
 
 dockerCompose {
@@ -27,7 +26,7 @@ test {
 jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/AccessApplication.class'])
+            fileTree(dir: it, exclude: ['**/AccessApp.class'])
         }))
     }
 }
@@ -35,7 +34,7 @@ jacocoTestReport {
 jacocoTestCoverageVerification {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/AccessApplication.class'])
+            fileTree(dir: it, exclude: ['**/AccessApp.class'])
         }))
     }
 }
@@ -54,22 +53,20 @@ dependencies {
     }
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
-
     implementation "io.awspring.cloud:spring-cloud-aws-starter-sqs:3.3.1"
-
-    // Spring Boot Starter for Microsoft Entra (provides auto-configuration specific to Entra)
     implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.22.0'
+    // provides auto-configuration specific to Entra
 
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-
-    implementation 'org.postgresql:postgresql:42.7.6'
     implementation 'org.javers:javers-core:7.8.0' // instead of `implementation 'org.javers:javers-persistence-sql:7.8.0'`
+
+    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly "org.flywaydb:flyway-database-postgresql"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    runtimeOnly "org.flywaydb:flyway-database-postgresql"
 
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
