--- a/dstew-access-api/open-api-specification.yml
+++ b/dstew-access-api/open-api-specification.yml
@@ -32,7 +32,7 @@ paths:
       summary: Create an application
       operationId: createApplication
       requestBody:
-        description: Create an application
+        description: create an application
         content:
           application/json:
             schema:
@@ -53,7 +53,7 @@ paths:
 
   /api/v1/applications/{id}:
     get:
-      summary: Get application by ID
+      summary: Get application by id
       operationId: getApplicationById
       tags:
         - applicationV1
@@ -61,7 +61,7 @@ paths:
         - name: id
           in: path
           required: true
-          description: The ID of the application to retrieve
+          description: The id of the application to retrieve
           schema:
             type: string
             format: uuid
@@ -91,12 +91,12 @@ paths:
         - name: id
           in: path
           required: true
-          description: The ID of the application to update
+          description: The id of the application to updated
           schema:
             type: string
             format: uuid
       requestBody:
-        description: Update an existing application
+        description: update an existing item
         content:
           application/json:
             schema:
@@ -115,7 +115,7 @@ paths:
         '500':
           description: 'Internal server error'
     delete:
-      summary: Delete application by ID
+      summary: Delete application by id
       operationId: deleteApplication
       tags:
         - applicationV1
@@ -123,7 +123,7 @@ paths:
         - name: id
           in: path
           required: true
-          description: The ID of the application to be deleted
+          description: The id of the application to be deleted
           schema:
             type: string
             format: uuid
