--- a/.github/workflows/build-feature.yml
+++ b/.github/workflows/build-feature.yml
@@ -31,7 +31,7 @@ jobs:
       contents: read
     with:
       snyk_organisation: 'legal-aid-agency'
-      snyk_test_exclude: 'build.generated'
+      snyk_test_exclude: 'build'
       snyk_target_reference: 'main'
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
