--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -37,7 +37,7 @@ jobs:
       security-events: write
     with:
       snyk_organisation: 'legal-aid-agency'
-      snyk_test_exclude: 'build,generated'
+      snyk_test_exclude: 'build'
       snyk_target_reference: 'main'
       github_code_scanning_report: 'true'
     secrets:
