--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
 subprojects {
     group = 'uk.gov.justice.laa.dstew.access'
+
+    // Force version of Checkstyle to one without CVEs to avoid Snyk complaints.
+    afterEvaluate {
+        if (plugins.hasPlugin('checkstyle')) {
+            checkstyle {
+                toolVersion = '10.26.0'
+            }
+        }
+    }
 }
